--- a/src/components/common/styles/Navbar.css
+++ b/src/components/common/styles/Navbar.css
@@ -1,7 +1,7 @@
 .nav-links{
     margin: 0;
     padding: 1%;
-    box-shadow: 2px 2px 2px 2px var(--secondary); 
+    box-shadow: 2px 2px 2px 2px var(--light-grey);
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
@@ -24,12 +24,4 @@
     color:var(--black) !important;
     border:none !important;
     box-shadow: none;
-}
-
-.right-btn{
-    /* display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: flex-end; */
-    /* float: right; */
 }
