--- a/src/components/timeline/styles/CreatePost.css
+++ b/src/components/timeline/styles/CreatePost.css
@@ -1,10 +1,10 @@
 .post-div{
     width: 50%;
     background-color: var(--primary);
-    padding: 2%;
+    box-shadow: 2px 2px 2px 2px var(--light-grey);
+    padding: 0.5%;
     margin: auto;
     margin-top: 3%;
-    border-radius: 5%;
 }
 
 .input-style{
@@ -14,6 +14,7 @@
     text-align: center;
     font-size: 20px;
     padding: 1%;
+    margin: 3px;
     font-family: 'arial';
 }
 
@@ -36,7 +37,6 @@
 .create-btn{
     margin: 2% !important;
     float: right;
-
     position: absolute;
     top: 0;
     right: 0px;
