--- a/src/index.css
+++ b/src/index.css
@@ -14,8 +14,44 @@ body {
   --primary: #3b5998;
   --secondary:#61bff1;
   --white: #ffffff;
+  --smoke-white:#f5f5f5;
   --black:#000000;
   --grey:grey;
+  --light-grey:#8d9093;
+}
+
+.scrollbar
+{
+	float: left;
+	height: 90vh;
+  margin: 1% 1%;
+	background: var(--smoke-white);
+	overflow-y: auto;
+}
+
+.main-scrollbar
+{
+	height: 100vh;
+	background: var(--smoke-white);
+	overflow-y: auto;
+}
+
+#style-4::-webkit-scrollbar-track
+{
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+	background-color: var(--smoke-white);
+}
+
+#style-4::-webkit-scrollbar
+{
+	width: 10px;
+	background-color: var(--smoke-white);
+}
+
+#style-4::-webkit-scrollbar-thumb
+{
+	background-color: var(--grey);
+  border-radius: 25%;
 }
 
 code {
