--- a/src/components/timeline/styles/PostTimeline.css
+++ b/src/components/timeline/styles/PostTimeline.css
@@ -23,3 +23,10 @@
 .name-style:hover{
     text-decoration: underline;
 }
+
+@media screen and (max-width:500px){
+    .post-card-style{
+    width:100%;
+    margin: 5% auto !important;
+    }
+}
