--- a/src/components/timeline/styles/CreatePost.css
+++ b/src/components/timeline/styles/CreatePost.css
@@ -10,10 +10,10 @@
     display: flex;
     flex-direction: row;
     justify-content: space-around;
-    text-align: center;
     font-size: 20px;
+    width: 93%;
     padding: 1%;
-    margin: 3px;
+    margin: 1% auto;
     font-family: 'arial';
 }
 
@@ -26,6 +26,7 @@
     padding: 1%;
     font-family: 'arial';
     resize: none;
+    width: 97%;
 }
 
 .text-area-div{
@@ -45,4 +46,10 @@
     cursor: pointer;
     color: var(--primary);
     transform: translateX(2px);
+}
+
+@media screen and (max-width:500px) {
+    .post-div{
+        width:80%;
+    }
 }
