--- a/src/index.css
+++ b/src/index.css
@@ -25,10 +25,31 @@ body {
 .scrollbar
 {
 	float: left;
-	height: 95vh;
+	height: 105vh;
   margin: 1% 1%;
 	background: var(--smoke-white);
 	overflow-y: auto;
+}
+
+@media screen and (max-width:500px){
+  .scrollbar{
+    height:103vh;
+  }
+}
+
+.scrollbar-profile
+{
+	float: left;
+	height: 85vh;
+  margin: 1% 1%;
+	background: var(--smoke-white);
+	overflow-y: auto;
+}
+
+@media screen and (max-width:500px){
+  .scrollbar-profile{
+    height:75vh;
+  }
 }
 
 .main-scrollbar
@@ -46,7 +67,7 @@ body {
 
 #style-4::-webkit-scrollbar
 {
-	width: 10px;
+	width: 5px;
 	background-color: var(--smoke-white);
 }
 
