--- a/src/components/profile/styles/Profile.css
+++ b/src/components/profile/styles/Profile.css
@@ -10,13 +10,13 @@
 .profile-div{
     position: relative;
     color: var(--white);
-    width: 20%;
+    width: 250px;
     background-image: radial-gradient(blue, green, blue);
     /* background-image: url('https://e0.pxfuel.com/wallpapers/983/800/desktop-wallpaper-cute-profile-pics-smile-t.jpg'); */
     border: 3px solid var(--white);
     object-fit:cover;
     background-repeat: no-repeat;
-    height: 100%;
+    height: 250px;
     border-radius: 60%;
     box-shadow: 3px 3px 3px 3px var(--grey);
 }
