--- a/src/components/profile/styles/ProfilePostCard.css
+++ b/src/components/profile/styles/ProfilePostCard.css
@@ -17,4 +17,9 @@
     color: var(--primary);
     cursor: pointer;
     font-size: 16px;
+    text-decoration: none;
+}
+
+.name-style:hover{
+    text-decoration: underline;
 }
