--- a/src/components/common/styles/Navbar.css
+++ b/src/components/common/styles/Navbar.css
@@ -30,6 +30,13 @@
     box-shadow: none;
 }
 
+.input-tag{
+    position: absolute !important;
+    right: 8% !important;
+    width:200px !important;
+    margin: -1.5% auto !important;
+}
+
 .profile-icon{
     position: absolute !important;
     right: 6% !important;
