--- a/src/components/profile/styles/Profile.css
+++ b/src/components/profile/styles/Profile.css
@@ -2,7 +2,8 @@
     width: 96%;
     height: 40vh;
     background-color: grey;
-    background-image: url('https://e1.pxfuel.com/desktop-wallpaper/481/340/desktop-wallpaper-backgrounds-of-widescreen-nature-with-quotes-for-facebook-cover-page-fb-cover.jpg');
+    background-image: url('https://img.freepik.com/free-photo/vivid-blurred-colorful-wallpaper-background_58702-3798.jpg');
+    background-size: 100%;
     box-shadow: 2px 2px 2px 2px var(--grey);
     padding: 2%;
     display: grid !important;
